--- a/index.html
+++ b/index.html
@@ -1,214 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>DHANUSH RAJA</title>
 
-    <!-- Meta Pixel Code -->
-    <script>
-        ! function(f, b, e, v, n, t, s) {
-            if (f.fbq) return;
-            n = f.fbq = function() {
-                n.callMethod ?
-                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-            };
-            if (!f._fbq) f._fbq = n;
-            n.push = n;
-            n.loaded = !0;
-            n.version = '2.0';
-            n.queue = [];
-            t = b.createElement(e);
-            t.async = !0;
-            t.src = v;
-            s = b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t, s)
-        }
-        (window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '1183539050152137');
-        fbq('track', 'PageView');
-    </script>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@700&display=swap" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 
-    <noscript>
+<style>
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Open Sans',sans-serif;}
+body{
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:linear-gradient(135deg,#020024,#090979,#00d4ff);
+}
+.hero{
+  width:360px;
+  border-radius:22px;
+  padding:25px 15px 18px;
+  text-align:center;
+  box-shadow:0 0 45px rgba(0,212,255,.5);
+  background:
+    linear-gradient(rgba(0,0,0,.75), rgba(0,0,0,.75)),
+    url("https://github.com/mrxsetup/hackerprediction/blob/main/hackerlogo.jpg?raw=true");
+  background-size:cover;
+  background-position:center;
+  animation: floatCard 4s ease-in-out infinite;
+}
+@keyframes floatCard{
+  0%,100%{transform:translateY(0)}
+  50%{transform:translateY(-10px)}
+}
+.profile-picture img{
+  height:120px;width:120px;border-radius:50%;
+  border:4px solid #00d4ff;
+  object-fit:cover;
+  box-shadow:0 0 25px #00d4ff;
+  animation:pulseGlow 2.2s infinite alternate, zoomPic 4s infinite;
+}
+@keyframes pulseGlow{
+  from{box-shadow:0 0 18px #00d4ff}
+  to{box-shadow:0 0 40px #00ffff}
+}
+@keyframes zoomPic{
+  0%,100%{transform:scale(1)}
+  50%{transform:scale(1.07)}
+}
+.heading1{
+  margin-top:15px;
+  font-family:'Oswald',sans-serif;
+  color:#fff;
+  letter-spacing:1px;
+}
+.subscriber-counter{
+  margin:15px 0;
+  color:#fff;
+  font-size:22px;
+  font-weight:bold;
+}
+.button{margin:16px 0;}
+.btn{
+  display:block;
+  padding:15px;
+  border-radius:14px;
+  color:#fff;
+  font-weight:bold;
+  text-decoration:none;
+  background:linear-gradient(270deg,#00c6ff,#0072ff,#00ffcc,#ff00cc);
+  background-size:600% 600%;
+  animation:gradientMove 3.5s ease infinite, zoomBtn 1.8s infinite alternate;
+  box-shadow:0 0 22px rgba(0,198,255,.9);
+  transition:.2s;
+}
+.btn:hover{transform:scale(1.07);}
+@keyframes gradientMove{
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@keyframes zoomBtn{
+  from{transform:scale(1)}
+  to{transform:scale(1.05)}
+}
+.points ul{list-style:none;margin:18px 0;color:#fff;}
+.points li{margin:8px 0;}
+.trust{color:#00ffcc;font-size:14px;}
+.urgent{color:#ffcc00;font-size:15px;margin-top:6px;}
+.ads-credit{margin-top:14px;}
+.ads-credit a{
+  display:inline-block;
+  padding:6px 12px;
+  font-size:12px;
+  color:#00ffcc;
+  text-decoration:none;
+  border:1px solid rgba(0,255,204,.6);
+  border-radius:6px;
+  background:rgba(0,0,0,.55);
+}
+.ads-credit a:hover{
+  background:rgba(0,0,0,.85);
+  box-shadow:0 0 12px rgba(0,255,204,.7);
+}
+</style>
+
+<!-- META PIXEL -->
+<script>
+!function(f,b,e,v,n,t,s){
+if(f.fbq)return;n=f.fbq=function(){
+n.callMethod? n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;
+n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];
+t=b.createElement(e);t.async=!0;
+t.src=v;
+s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)
+}(window, document,'script','https://connect.facebook.net/en_US/fbevents.js');
+
+fbq('init','1343819950373428');
+fbq('track','PageView');
+</script>
+
+<noscript>
 <img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1183539050152137&ev=PageView&noscript=1"/>
+src="https://www.facebook.com/tr?id=1343819950373428&ev=PageView&noscript=1"/>
 </noscript>
-    <!-- End Meta Pixel Code -->
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Garud Fixer (Baazigar)</title>
+<!-- CONVERSION API -->
+<script>
+const ACCESS_TOKEN = "EAAqHRZA7ZCtMYBQtcNqdjjNjZABJueBfBCMGgsQmPZAGbvmaKpYmtSZCSDL3uX1lxVDnZB447tsZBg3CiVmZCwZBejxWbZCJNyRqUPVeisGg6Uklw9L53OfrRUDqJejqu9YZCGZCpnVhvxYqZCuhnO95rdderzDTFqdtgotDXTWMltFkSH8sYQWGzX9W1zPLROtXYle0cEwZDZD";
+const PIXEL_ID = "1343819950373428";
 
-    <!-- Preload background for faster render -->
-    <link rel="preload" as="image" href="https://applescoop.org/image/wallpapers/iphone/iphone-dark-black-and-blue-abstract-impede-depth-effect-with-think-lines-apple-iphone-21-09-2025-1758398684-hd-wallpaper.webp">
-
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: system-ui, -apple-system, "Segoe UI", sans-serif;
+function sendCAPIEvent(eventName){
+  fetch(`https://graph.facebook.com/v18.0/${PIXEL_ID}/events?access_token=${ACCESS_TOKEN}`, {
+    method: "POST",
+    headers: {"Content-Type": "application/json"},
+    body: JSON.stringify({
+      data: [{
+        event_name: eventName,
+        event_time: Math.floor(Date.now()/1000),
+        action_source: "website",
+        user_data: {
+          client_user_agent: navigator.userAgent
         }
+      }]
+    })
+  });
+}
 
-        body {
-            background: #0c0f1a url("https://applescoop.org/image/wallpapers/iphone/iphone-dark-black-and-blue-abstract-impede-depth-effect-with-think-lines-apple-iphone-21-09-2025-1758398684-hd-wallpaper.webp") center/cover no-repeat fixed;
-            color: #fff;
-            min-height: 100vh;
-        }
+// Auto PageView CAPI
+sendCAPIEvent("PageView");
+</script>
 
-        .overlay {
-            background: rgba(10, 12, 22, .82);
-            min-height: 100vh;
-        }
-
-        .container {
-            max-width: 420px;
-            margin: auto;
-            padding: 20px 15px 90px;
-        }
-
-        /* Profile */
-
-        .profile-box {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .profile-box img {
-            width: 95px;
-            height: 95px;
-            border-radius: 50%;
-            border: 2px solid #ffffff55;
-        }
-
-        .profile-box h1 {
-            margin-top: 10px;
-            font-size: 1.5rem;
-            font-weight: 700;
-        }
-
-        /* Card */
-
-        .card {
-            background: #ffffff12;
-            border: 1px solid #ffffff20;
-            border-radius: 12px;
-            padding: 16px;
-            margin-bottom: 15px;
-            text-align: center;
-        }
-
-        /* Button */
-
-        .btn {
-            display: block;
-            margin-top: 14px;
-            padding: 14px;
-            border-radius: 30px;
-            background: #1fa2ff;
-            color: #fff;
-            font-weight: 700;
-            text-decoration: none;
-        }
-
-        /* Features */
-
-        .features {
-            list-style: none;
-            margin-top: 8px;
-        }
-
-        .features li {
-            font-size: .95rem;
-            margin: 6px 0;
-        }
-
-        .features li::before {
-            content: "✓ ";
-            color: #4caf50;
-        }
-
-        /* Footer */
-
-        .footer {
-            text-align: center;
-            font-size: .85rem;
-            opacity: .85;
-        }
-
-        .footer a {
-            color: #6bd4ff;
-            text-decoration: none;
-        }
-
-        /* Bottom CTA */
-
-        .bottom-bar {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background: #000000cc;
-            padding: 10px;
-            text-align: center;
-        }
-
-        .bottom-bar a {
-            display: inline-block;
-            width: 90%;
-            max-width: 320px;
-            padding: 14px;
-            border-radius: 30px;
-            background: #12d8fa;
-            color: #000;
-            font-weight: 700;
-            text-decoration: none;
-        }
-    </style>
 </head>
 
 <body>
-    <div class="overlay">
 
-        <div class="container">
+<div class="hero">
 
-            <div class="profile-box">
-                <img src="https://d1yei2z3i6k35z.cloudfront.net/13184094/6952a267b21b7_40bb2f3d-25fd-484d-9b63-a8468a701820.jfif" alt="Garud Fixer">
-                <h1>Garud Fixer (Baazigar)</h1>
-            </div>
+  <div class="profile-picture">
+    <img src="https://github.com/mrxsetup/hackerprediction/blob/main/hackerlogo.jpg?raw=true">
+  </div>
 
-            <div class="card">
-                <h2>Cricket Match Predictions</h2>
-                <p style="opacity:.9;">Well researched match insights & analysis</p>
-                <a href="https://t.me/+9WnufKITJK9lM2I1" class="btn">Join Free Telegram Channel</a>
-            </div>
+  <h1 class="heading1">👑 DHANUSH RAJA 👑</h1>
 
-            <div class="card">
-                <h2>What You Get</h2>
-                <ul class="features">
-                    <li>Match & Toss Analysis</li>
-                    <li>Team Performance Insights</li>
-                    <li>Daily Free Updates</li>
-                    <li>Simple & Clean Info</li>
-                </ul>
-            </div>
+  <div class="subscriber-counter" id="subscriber-count">0+ Members</div>
 
-            <div class="card">
-                <p style="opacity:.9;">
-                    Trusted by thousands of cricket lovers across India.
-                </p>
-            </div>
+  <div class="trust">✔️ 100% Free | ✔️ Trusted | ✔️ No Scam</div>
+  <div class="urgent">⏳ Join Before Match Starts</div>
 
-            <div class="footer">
-                Marketing by :
-                <a href="https://t.me/+lpl9wSvnR3YyZjA1">QB Agency™</a>
-            </div>
+  <div class="button">
+    <a href="https://t.me/+MqGWTIoYgqJhZjk1" onclick="fbq('track','Lead'); sendCAPIEvent('Lead');" class="btn">
+      Join Telegram Channel <i class="fa-brands fa-telegram"></i>
+    </a>
+  </div>
 
-        </div>
+  <div class="points">
+    <ul>
+      <li>🏆 Accurate Predictions</li>
+      <li>🏆 Fast Updates</li>
+      <li>🏆 Trusted Source</li>
+    </ul>
+  </div>
 
-        <div class="bottom-bar">
-            <a href="https://t.me/+9WnufKITJK9lM2I1">अभी टेलीग्राम जॉइन करें</a>
-        </div>
+  <div class="button">
+    <a href="https://t.me/+MqGWTIoYgqJhZjk1" onclick="fbq('track','Lead'); sendCAPIEvent('Lead');" class="btn">
+      SUBSCRIBE FOR FREE <i class="fa-brands fa-telegram"></i>
+    </a>
+  </div>
 
-    </div>
+  <div class="ads-credit">
+    <a href="https://t.me/CAPTAIN4433" target="_blank">
+      ADS SETUP BY – @CAPTAIN4433
+    </a>
+  </div>
+
+</div>
+
+<script>
+const target = 60000;
+const duration = 2000;
+const el = document.getElementById("subscriber-count");
+let start = null;
+
+function animate(t){
+  if(!start) start = t;
+  let progress = t - start;
+  let count = Math.min(Math.floor((progress/duration)*target), target);
+  el.innerText = count.toLocaleString() + "+ Members";
+  if(count < target) requestAnimationFrame(animate);
+}
+requestAnimationFrame(animate);
+</script>
+
 </body>
-
 </html>
